...
    <item name="away_badge_progress_bar" type="id"/>

    <item name="home_formation" type="id"/>
    <item name="away_formation" type="id"/>

    <item name="detail_activity_progress_bar" type="id"/>
    <item name="detail_activity_scroll_view" type="id"/>

    <item name="goals_label_text" type="id"/>
    <item name="home_goals" type="id"/>
    <item name="away_goals" type="id"/>

    <item name="shots_label_text" type="id"/>
...
    <item name="substitutes_label_text" type="id"/>
    <item name="home_substitutes" type="id"/>
    <item name="away_substitutes" type="id"/>

    <item name="error_message" type="id"/>

    <item name="main_container" type="id"/>
    <item name="detail_view" type="id"/>

    <item name="list_event" type="id"/>
    <item name="spinner_league" type="id"/>
    <item name="list_favorite_event" type="id"/>
    <item name="list_favorite_team" type="id"/>
    <item name="swipe_refresh_favorite_event" type="id"/>
    <item name="swipe_refresh_favorite_team" type="id"/>

    <item name="tab_layout_matches" type="id"/>
    <item name="view_pager_matches" type="id"/>

    <item name="tab_layout_favorites" type="id"/>
    <item name="view_pager_favorites" type="id"/>

    <item name="list_team" type="id"/>
    <item name="team_name" type="id"/>
...
