...
    <string name="substitutes">Substitutes</string>

    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="favorites">Favorites</string>

    <string name="event_added_to_favorites">Added to favoriteMatch</string>
    <string name="event_removed_from_favorites">Removed from favoriteMatch</string>
    <string name="event_is_still_loading">Event is still loading</string>

    <string name="detail_activity_label">Match Detail</string>
    <string name="main_activity_label">Football Apps</string>
    <string name="search_match_activity_label">Search Football Match</string>

    <string name="next_match_tab_label">NEXT</string>
    <string name="past_match_tab_label">PAST</string>

    <string name="search">Search</string>
    <string name="match_search_hint">Arsenal vs Chelsea</string>

    <array name="league">
        <item>English Premier League</item>
...
