...
        android:id="@+id/action_teams"
        android:enabled="true"
        android:icon="@drawable/teams_icon"
        android:title="@string/teams"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
</menu>
